buyer public view done, ongoing order count check for job is done

--- a/public/assests/css/addJob.styles.css
+++ b/public/assests/css/addJob.styles.css
@@ -49,6 +49,7 @@ body{
     width: 100%;
 }
 .addjob-container input[type="text"], .addjob-container textarea{
+    font: 16px Macan, Helvetica Neue, Helvetica, Arial, sans-serif;
     margin-bottom: 32px;
     border-radius: 4px;
     width: 100%;
@@ -131,37 +132,16 @@ body{
     align-items: center;
 }
 .addjob-container button {
-    display: inline-block;
-    border-radius: 4px;
+    width: 150px;
+    padding: 8px;
+    transition: ease-in-out 0.3s;
     padding: 8px;
     background-color: #31d65a;
-    border: none;
     color: #FFFFFF;
     text-align: center;
     transition: ease-in-out 0.3s;
     cursor: pointer;
     float: right;
-}
-button span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.5s;
-}
-button span:after {
-    content: '\00bb';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
-} 
-button:hover span {
-    padding-right: 25px;
-}
-button:hover span:after {
-    opacity: 1;
-    right: 0;
 }
 
 @media only screen and (max-width: 1200px) {
