--- a/public/assests/css/complaints.styles.css
+++ b/public/assests/css/complaints.styles.css
@@ -766,3 +766,23 @@ box-shadow: var(--shadow); */
     border: #000;
     border-radius: 10px;
 }
+
+div.solved,
+div.unsolved {
+    padding: 5px 10px;
+    border-radius: 5px;
+    color: #fff;
+    font-weight: bold;
+    text-align: center;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+}
+
+div.solved {
+    background-color: #28a745;
+    /* A nicer shade of green */
+}
+
+div.unsolved {
+    background-color: #dc3545;
+    /* A richer shade of red */
+}
