--- a/public/assests/css/search.styles.css
+++ b/public/assests/css/search.styles.css
@@ -11,17 +11,16 @@ body{
 
 /*header*/
 .SkillsparqSearchMainContainer .SearchpPersonalizedHeader{
-    min-height: 100px!important;
-    margin-top: 24px!important;
-    margin-bottom: 48px!important;
-    font-size: 32px!important;
-    font-weight: 700!important;
-    color: #222325!important;
-    line-height: 140%!important;
-    /* padding: 0 32px; */
-    height: 100%!important;
-    width: 100%!important;
-    padding: 16px 32px!important;
+    min-height: 100px;
+    margin-top: 24px;
+    margin-bottom: 24px;
+    font-size: 32px;
+    font-weight: 700;
+    color: #222325;
+    line-height: 140%;
+    height: 100%;
+    width: 100%;
+    padding: 16px 32px;
     
 }
 
@@ -36,22 +35,37 @@ body{
     font-family: Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 
+
+
 /*dashboard-content*/
 .SkillsparqSearchDashboardContainer{
     display: flex;
-    justify-content: space-around;
-    margin: 0px 16px;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0px 32px;
+    height: 100%;
 }
 
-/*job-feed*/
-.SkillsparqSearchDashboardContainer .SkillSparqSearchFeed{
-    width: 75%;
+.SkillsparqSearchDashboardContainer .SkillsparqSearchDashboardContainer .SkillSparqSearchFeed{
+    height: 100%;
+    width: 65%;
     padding: 0px 32px;
-}
-
-.SkillSparqSearchFeed{
+    display: flex;
+    flex-wrap: wrap!important;
+    /* justify-content:space-between; */
+    align-items: center;
     margin-left: 20px;
     margin-right: 20px;
+}
+.SkillsparqSearchDashboardContainer .SkillsparqSearchDashboardContainer .SkillSparqSubFeed{
+    width: 35%;
+}
+
+.SkillsparqSearchMainContainer .SkillsparqSearchDashboardContainer .SkillSparqSearchFeed .SkillSparqFeedContent{
+    border: #dadbdd 1px solid;
+    background: #fff;
+    min-height: 200px;
+    margin: 16px;
 }
 
 .SkillsparqSearchDashboardContainer .profile{
