past complaints and help requests are added

--- a/public/assests/css/displayJob.styles.css
+++ b/public/assests/css/displayJob.styles.css
@@ -392,6 +392,7 @@ body {
 }
 
 .displayJobContent .jobViewBuyerDetailsSideBar .jobViewBuyerImage img{
+    object-fit: cover;
     height: 160px;
     width:160px;
     margin-top: 24px;
