--- a/public/assests/css/feedbackCard.styles.css
+++ b/public/assests/css/feedbackCard.styles.css
@@ -12,8 +12,8 @@
 }
 
 .feedbackCard .profile img {
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     margin-right: 10px;
     object-fit: cover;
@@ -21,6 +21,7 @@
 
 .feedbackCard .username {
     font-weight: bold;
+    font-size: 18px;
 }
 
 .feedbackCard .rating {
@@ -37,6 +38,7 @@
 
 .feedbackCard .feedback-text {
     margin-bottom: 10px;
+    font-size: 18px;
 }
 
 .feedbackCard .created-date {
