--- a/public/assests/css/search.styles.css
+++ b/public/assests/css/search.styles.css
@@ -41,36 +41,73 @@ body{
 .SkillsparqSearchDashboardContainer{
     padding: 0 24px 0 24px;
     gap: 24px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0px 32px;
+    /* display: flex; */
+    /* align-items: center;
+    justify-content: space-between; */
+    margin: 0px 128px;
     height: 100%;
 }
 
-.SkillsparqSearchDashboardContainer .SkillsparqSearchDashboardContainer .SkillSparqSearchFeed{
-    height: 100%;
-    width: 65%;
-    padding: 0px 32px;
+.SkillsparqSearchMainContainer .SkillsparqSearchDashboardContainer .SkillsparqSearchDashBlockContainer{
     display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+}
+
+.SkillsparqSearchMainContainer .SkillsparqSearchDashboardContainer .SkillsparqSearchDashBlockContainer .SkillSparqSearchFeed{
+    height: 100%;
+    width: 100%;
+    /* padding: 0px 32px; */
+    display: block;
     /* flex-wrap: wrap!important; */
     /* justify-content:space-between; */
     align-items: center;
-    margin-left: 20px;
+    /* margin-left: 20px; */
     margin-right: 20px;
 }
-.SkillsparqSearchDashboardContainer .SkillsparqSearchDashboardContainer .SkillSparqSubFeed{
-    width: 35%;
-}
 
-.SkillsparqSearchMainContainer .SkillsparqSearchDashboardContainer .SkillSparqSearchFeed .SkillSparqFeedContent{
+.SkillsparqSearchMainContainer .SkillsparqSearchDashboardContainer .SkillsparqSearchDashBlockContainer .SkillSparqSearchFeed .SkillSparqFeedCont{
     border: #dadbdd 1px solid;
     background: #fff;
-    min-height: 200px;
+    /* min-height: 200px; */
     margin: 16px;
+    /* min-width: 100px; */
+    height: 100%;
 }
 
-.SkillsparqSearchDashboardContainer .profile{
+.SkillsparqSearchMainContainer .SkillsparqSearchDashboardContainer .SkillsparqSearchDashBlockContainer .SkillSparqSearchFeed .SkillSparqFeedCont .SkillSparqFeedContent{
+    padding: 16px;
+    margin: 16px;
+    display: -webkit-box;
+    -webkit-line-clamp:3;
+    -webkit-box-orient: vertical;
+    text-align: justify;
+    overflow: hidden;
+    padding-bottom: 0px;
+}
+
+.SkillsparqSearchMainContainer .SkillsparqSearchDashboardContainer .SkillsparqSearchDashBlockContainer .SkillSparqSearchFeed .SkillSparqFeedCont .SkillSparqFeedHead{
+    margin: 16px;
+    height: 100%;
+}
+
+.SkillsparqSearchMainContainer .SkillsparqSearchDashboardContainer .SkillsparqSearchDashBlockContainer .SkillSparqSearchFeed .SkillSparqFeedCont .SkillSparqFeedHead .FlexHead{
+    display: flex;
+    justify-content: space-between;
+    gap: 16px;
+}
+
+.SkillsparqSearchMainContainer .SkillsparqSearchDashboardContainer .SkillsparqSearchDashBlockContainer .SkillSparqSearchFeed .SkillSparqFeedCont .SkillSparqFeedHead .SkillSparqFeedUserNamenm{
+    
+}
+.SkillsparqSearchMainContainer .SkillsparqSearchDashboardContainer .SkillsparqSearchDashBlockContainer .SkillSparqSearchFeed .SkillSparqFeedCont .SkillSparqFeedHead .SkillSparqFeedImg{
+    width: 100px;
+    height: 100px;
+    margin:8px;
+}
+
+/* .SkillsparqSearchDashboardContainer .profile{
     position: relative;
     background-color: #fff;
     border: 1px solid #dadbdd;
@@ -79,10 +116,10 @@ body{
     line-height: 130%;
     margin-bottom: 16px;
     box-sizing: border-box;
-}
+} */
 
 /*Active Status*/
-.SkillsparqSearchDashboardContainer .profile .online{
+/* .SkillsparqSearchDashboardContainer .profile .online{
     color: #31d65a;
     border-bottom: 4px solid #31d65a;
     margin-bottom: 8px;
@@ -161,4 +198,4 @@ body{
         width: 100%;
         padding: 0px 16px;
     }
-}
+} 
