--- a/public/assests/css/order.styles.css
+++ b/public/assests/css/order.styles.css
@@ -86,6 +86,10 @@ header{
 .userActivity .tabContent{
     padding: 16px 16px 16px 0;
 }
+.userActivity .milestones{
+    width: 100%;
+    padding-left: 16px;
+}
 .userActivity p{
     text-align: justify;
 }
@@ -258,6 +262,13 @@ P{
 /* Tab 2 */
 
 /* buyer details */
+.userActivity #details{
+    height: 100%;
+    overflow-y: scroll;
+    padding: 16px 16px 32px 16px;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
 .userActivity #details .buyer{
     border: 1px solid #c5c6c9;
     border-radius: 5px;
@@ -486,7 +497,7 @@ a {
     background-color: #f9f9f9;
     border-radius: 5px;
     overflow-y: auto;
-    max-height: 200px;
+    max-height: 400px;
 }
 .orderContainer .order-history-item {
     margin-bottom: 15px;
