--- a/public/assests/css/sellerHeader.styles.css
+++ b/public/assests/css/sellerHeader.styles.css
@@ -132,7 +132,41 @@ header .upperHeader{
     border-radius: 100%;
     object-fit: cover;
 }
+*notification component*/
 
+.notificationIcon {
+    position: relative;
+    cursor: pointer;
+}
+
+.notificationBox {
+    z-index: 1;
+    display: none;
+    position: absolute;
+    top: 64px;
+    right: 16px;
+    background-color: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    padding: 8px;
+    width: 332px;
+    height: 400px;
+    overflow-y: scroll;
+}
+
+.notificationList {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.notificationList li {
+    margin-bottom: 10px;
+}
+
+.notificationList li:last-child {
+    margin-bottom: 0;
+}
 @media only screen and (max-width: 1500px) {
     .navbar .wordLink  {
         display: none;
